--- a/sistema_de_colaboradores/backend/package.json
+++ b/sistema_de_colaboradores/backend/package.json
@@ -1,5 +1,20 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "mysql2": "^3.4.2",
+    "nodemon": "^2.0.22"
+  },
+  "scripts": {
+    "dev": "nodemon ./server.js",
+    "start": "node ./server.js start",
+    "test": ""
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
