--- a/sistema_de_colaboradores/backend/package.json
+++ b/sistema_de_colaboradores/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.4.2",
     "nodemon": "^2.0.22"
   },
